force-app/main/default/objects/ReportProfileMapping__c/ReportProfileMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mappings of Reports to be shown on Home Screen, by Report Type and by User Profile.</description>
    <label>ReportProfileMapping</label>
</CustomObject>