force-app/main/default/objects/ReportProfileMapping__c/fields/AnnualReportName__c.field-meta.xml
<CustomField>
    <fullName>AnnualReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AnnualReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>