force-app/main/default/objects/ReportProfileMapping__c/fields/CaseReportName__c.field-meta.xml
<CustomField>
    <fullName>CaseReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>