force-app/main/default/objects/ReportProfileMapping__c/fields/ComplaintReportName__c.field-meta.xml
<CustomField>
    <fullName>ComplaintReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ComplaintReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>