force-app/main/default/objects/ReportProfileMapping__c/fields/MyActivitiesReportName__c.field-meta.xml
<CustomField>
    <fullName>MyActivitiesReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyActivitiesReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>