force-app/main/default/objects/ReportProfileMapping__c/fields/OverdueReportName__c.field-meta.xml
<CustomField>
    <fullName>OverdueReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OverdueReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>