force-app/main/default/objects/ReportProfileMapping__c/fields/ProductDueReportName__c.field-meta.xml
<CustomField>
    <fullName>ProductDueReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProductDueReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>