force-app/main/default/objects/ReportProfileMapping__c/fields/ReferralReportName__c.field-meta.xml
<CustomField>
    <fullName>ReferralReportName__c</fullName>
    <description>CR Referral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ReferralReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>