force-app/main/default/objects/ReportProfileMapping__c/listViews/Case_Report_View.listView-meta.xml
<ListView>
    <fullName>Case_Report_View</fullName>
    <columns>NAME</columns>
    <columns>ProfileName__c</columns>
    <columns>CaseReportName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Case Report View</label>
    <language>en_US</language>
</ListView>